# mossball

./: .gitignore  CONTRIBUTING.md  GRADING.md  README.md  pyproject.toml
.github/workflows/: python-app.yml
Barsamyan-D/: README.md  demo_notebook.py  index.css  index.js  mcq.css  mcq.js  multiple_choice.py  requirements.txt  str.css  str.js  structure_strip.py
Barsamyan-D/mcq-plugin-david/: multiple_choice.py
Barsamyan-D/str-strip-plugin-david/: README.md  str.css  str.js  structure_strip.py
Barsamyan_D/mcq-plugin-david/: answers.json
Barsamyan_D/str_strip_plugin_david/: StructureStripWidget.py  str.css  str.js
backends/institution/: consts.py  dummy_data.py  institution_backend.py
backends/plugin/: plugin_backend.py
cassandratin13/: mcq.css  mcq.js  mcq_plugin.py  mcqs.js
cassandratin13/demo/: cassandra_demo.py  index.css  index.js
cassandratin13/mcq_plugin/: MCQPlugin.py  README.md  mcq.css  mcq.js  mcq_plugin.py
cassandratin13/sort_paragraphs_plugin/: README.md  SortTheParagraphs.py  callbacks.py  sort_paragraphs.py  sort_paragraphs_widget.py  stp.css  stp.js  widgets.py
cassandratin13/sort_paragraphs_plugin/sessions/: login.py
design-system/: global-svg-icons.js  global.css
eun-chae-s/: color_picker.css  color_picker.js  marimo_first_trial.py  mcq-plugin.py  mcq.css  mcq.js  test.ipynb  timer.css  timer.js
eun-chae-s/drag-the-words/: design.md
eun-chae-s/drag-the-words/implementation/: README.md  drag_the_words.css  drag_the_words.js  drag_the_words.py
eun-chae-s/mcq-data/: data1.json
eun_chae_s/drag_the_words/implementation/: DragWordsWidget.py  drag_the_words.css  drag_the_words.js  drag_the_words.py
evence_wang/: .env  drag_drop.py  evence_demo.py  evence_drag_drop.py  evence_mcq.py  try.py
evence_wang/FileUploaderModule/: FileUploader.py  README.md  file_uploader_plugin.py  requirements.txt  s3_helpers.py  upload.css  upload.js
evence_wang/MCQ_Module/: mcq.css  mcq.js
evence_wang/SimpleWidget/: .gitignore  example.ipynb  package-lock.json  package.json  pyproject.toml
evence_wang/SimpleWidget/js/: widget.css  widget.tsx
evence_wang/SimpleWidget/src/simple_widget/: __init__.py
frontend/: custom_theme.css  custom_theme_brown_beige.css  custom_theme_orange_yellow.css  widgets.py  widgets_notebook.py  widgets_notebook_local.py
frontend/sessions/: session_manager.py
lorena-b/find-the-words/: .gitignore  README.md  demo.py  package-lock.json  package.json  pyproject.toml
lorena-b/find-the-words/js/: buttons.js  constants.js  grid.js  icons.js  timer.js  utils.js  widget.css  widget.js
lorena-b/find-the-words/src/find_the_words/: __init__.py
lorena-b/multiple-choice/: README.md  multiple_choice_demo.py  pyproject.toml
lorena-b/multiple-choice/src/multiple_choice/: __init__.py
lorena-b/multiple-choice/src/multiple_choice/static/: widget.css  widget.js
lorena-b/mydemo/: README.md  demo.py  pyproject.toml
lorena-b/mydemo/src/mydemo/: __init__.py
lorena-b/mydemo/src/mydemo/static/: widget.css  widget.js
test/helpers/: setup.py
tests/: README.md  conftest.py  mock_inst.py  requirements.txt
tests/helpers/: __init__.py  setup.py
tests/notebooks/: data.json  drag_the_words_simple.py  file_uploader_test.py  find_the_words_timed_test.py  find_the_words_untimed_test.py  multiple_choice_question.py  non_backend_data.json  sort_the_paragraph.py  structure_strip_test.py
tests/testfiles/: test_backend.py  test_drag_the_words.py  test_file_uploader.py  test_find_the_words.py  test_multiple_choice_question.py  test_simple.py  test_sort_the_paragraph.py  test_structure_strip.py
tests/ui-test/: test_drag_the_words.py  test_simple.py
