[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mossball"]

[project]
name = "mossball"
version = "0.1.0"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
maintainers = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
description = "Marimo plugins for classroom exercises"
keywords = ["teaching"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "marimo>=0.9.0",
]
