[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mossball", "find_the_words"]

[tool.hatch.build.targets.wheel.sources]
"." = "mossball"
"lorena-b/find-the-words/src/find_the_words" = "find_the_words"

[tool.hatch.build.targets.wheel.force-include]
"lorena-b/find-the-words/src/find_the_words/static" = "find_the_words/static"

[project]
name = "mossball"
version = "0.1.0"
authors = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
maintainers = [
    {name = "Greg Wilson", email = "gvwilson@third-bit.com"},
]
description = "Marimo plugins for classroom exercises"
keywords = ["teaching"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "marimo>=0.9.0",
    "anywidget",
    "traitlets",
    "pymupdf",
    "pillow",
    "boto3",
    "python-dotenv",
    "requests",
]

[project.optional-dependencies]
dev = ["watchfiles", "selenium", "webdriver-manager", "pytest"]

# build find-the-words
[tool.hatch.build.hooks.jupyter-builder]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = ["lorena-b/find-the-words/src/find_the_words/static/widget.js"]
dependencies = ["hatch-jupyter-builder>=0.5.0"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
npm = "npm"
build_cmd = "dev-build"
path = "lorena-b/find-the-words"